default/objects/Credit_Factory_Report__c/fields/RU_credit_term__c.field-meta.xml
<CustomField>
    <fullName>RU_credit_term__c</fullName>
    <label>Credit term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>PO7</fullName>
            </value>
            <value>
                <fullName>PK14</fullName>
            </value>
            <value>
                <fullName>S/F</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>