default/objects/Credit_Factory_Report__c/fields/RU_credit_type__c.field-meta.xml
<CustomField>
    <fullName>RU_credit_type__c</fullName>
    <label>Credit type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>