default/objects/Credit_Factory_Report__c/fields/RU_denial_reason__c.field-meta.xml
<CustomField>
    <fullName>RU_denial_reason__c</fullName>
    <description>причина отказа в кредите</description>
    <inlineHelpText>причина отказа в кредите</inlineHelpText>
    <label>Denial reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>