default/objects/Credit_Factory_Report__c/fields/RU_Proposal_Blocked_by_Scoring__c.field-meta.xml
<CustomField>
    <fullName>RU_Proposal_Blocked_by_Scoring__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Заявка на прескоринг заблокирована</inlineHelpText>
    <label>Proposal Blocked by Scoring</label>
    <type>Checkbox</type>
</CustomField>