default/objects/Credit_Factory_Report__c/fields/RU_Scoring_Credit_Period__c.field-meta.xml
<CustomField>
    <fullName>RU_Scoring_Credit_Period__c</fullName>
    <inlineHelpText>Credit period</inlineHelpText>
    <label>Scoring Credit Period</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>