default/objects/Credit_Factory_Report__c/fields/RU_Scoring_date__c.field-meta.xml
<CustomField>
    <fullName>RU_Scoring_date__c</fullName>
    <description>Дата когда был проведен последний скоринг</description>
    <inlineHelpText>Date when scoring was provided last time</inlineHelpText>
    <label>Scoring date</label>
    <type>Date</type>
</CustomField>