default/objects/Credit_Factory_Report__c/fields/RU_scoring_decision__c.field-meta.xml
<CustomField>
    <fullName>RU_scoring_decision__c</fullName>
    <description>Решение скоринга</description>
    <inlineHelpText>Scoring decision</inlineHelpText>
    <label>Scoring decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Prepay</fullName>
            </value>
            <value>
                <fullName>Credit_approved</fullName>
                <label>Credit approved</label>
            </value>
            <value>
                <fullName>No_data</fullName>
                <label>No data</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>