default/objects/Credit_Factory_Report__c/fields/RU_scoring_decision_code__c.field-meta.xml
<CustomField>
    <fullName>RU_scoring_decision_code__c</fullName>
    <label>Scoring decision code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>