default/objects/Credit_Factory_Report__c/fields/RU_scoring_decision_state__c.field-meta.xml
<CustomField>
    <fullName>RU_scoring_decision_state__c</fullName>
    <label>Scoring desicion state</label>
    <length>255</length>
    <type>Text</type>
</CustomField>