default/objects/Credit_Factory_Report__c/fields/RU_scoring_decision_status__c.field-meta.xml
<CustomField>
    <fullName>RU_scoring_decision_status__c</fullName>
    <description>Показывает просрочен ли скоринг</description>
    <formula>IF(ISBLANK(RU_Scoring_expiration_date__c), &#39;Решения нет&#39;, IF(RU_Scoring_expiration_date__c &lt;= TODAY(), &#39;Просрочено&#39;, &#39;Действующее&#39;))</formula>
    <inlineHelpText>Показывает просрочен ли скоринг</inlineHelpText>
    <label>Scoring status</label>
    <type>Text</type>
</CustomField>