default/objects/Credit_Factory_Report__c/fields/RU_Scoring_description__c.field-meta.xml
<CustomField>
    <fullName>RU_Scoring_description__c</fullName>
    <description>обеспечение</description>
    <label>Provision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>