default/objects/Credit_Factory_Report__c/fields/RU_Scoring_expiration_date__c.field-meta.xml
<CustomField>
    <fullName>RU_Scoring_expiration_date__c</fullName>
    <description>Дата когда последний скоринг истекает</description>
    <inlineHelpText>Date when the last scoring will expire</inlineHelpText>
    <label>Scoring expiration date</label>
    <type>Date</type>
</CustomField>