default/objects/Credit_Factory_Report__c/fields/RU_Scoring_Final_Decision__c.field-meta.xml
<CustomField>
    <fullName>RU_Scoring_Final_Decision__c</fullName>
    <formula>IF( RU_Application_Blocked__c , $Label.Pre_Scoring_Blocked, TEXT(RU_scoring_decision__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scoring Final Decision</label>
    <type>Text</type>
</CustomField>