default/objects/Credit_Factory_Report__c/fields/RU_Scoring_Payment_Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>RU_Scoring_Payment_Time_Limit__c</fullName>
    <inlineHelpText>Due date</inlineHelpText>
    <label>Scoring Payment Time Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>