default/objects/Credit_Factory_Report__c/fields/RU_scoring_type__c.field-meta.xml
<CustomField>
    <fullName>RU_scoring_type__c</fullName>
    <label>Scoring type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>empty</fullName>
            </value>
            <value>
                <fullName>Prescoring</fullName>
            </value>
            <value>
                <fullName>Scoring</fullName>
            </value>
            <value>
                <fullName>FRAUD_check</fullName>
                <label>FRAUD check</label>
            </value>
            <value>
                <fullName>KK</fullName>
                <isActive>false</isActive>
                <label>KK</label>
            </value>
            <value>
                <fullName>LPR</fullName>
                <isActive>false</isActive>
                <label>LPR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>