default/objects/Credit_Factory_Report__c/fields/Scoring_notification_sent__c.field-meta.xml
<CustomField>
    <fullName>Scoring_notification_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Scoring notification was sent from SF</description>
    <inlineHelpText>Scoring notification was sent from SF</inlineHelpText>
    <label>Scoring notification sent</label>
    <type>Checkbox</type>
</CustomField>