default/objects/Credit_Factory_Report__c/fields/Security_Level__c.field-meta.xml
<CustomField>
    <fullName>Security_Level__c</fullName>
    <label>Security Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>