default/objects/Credit_Factory_Report__c/fields/Solvency_Index__c.field-meta.xml
<CustomField>
    <fullName>Solvency_Index__c</fullName>
    <label>Solvency Index</label>
    <length>20</length>
    <type>Text</type>
</CustomField>