default/objects/Credit_Factory_Report__c/fields/Source_of_lead_matched__c.field-meta.xml
<CustomField>
    <fullName>Source_of_lead_matched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Source of lead matched to conditions</description>
    <inlineHelpText>Source of lead matched to conditions</inlineHelpText>
    <label>Source of lead matched</label>
    <type>Checkbox</type>
</CustomField>