default/objects/Credit_Factory_Report__c/fields/Staff_Range__c.field-meta.xml
<CustomField>
    <fullName>Staff_Range__c</fullName>
    <label>Staff Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>