default/objects/Credit_Factory_Report__c/fields/Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Tax_Id__c</fullName>
    <label>Tax Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>