default/objects/Credit_Factory_Report__c/fields/Taxpayer_Id__c.field-meta.xml
<CustomField>
    <fullName>Taxpayer_Id__c</fullName>
    <description>Taxpayer Identification Number from Account.INN</description>
    <formula>Account__r.INN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Taxpayer identification number (TIN of the organization)</inlineHelpText>
    <label>Taxpayer Id</label>
    <type>Text</type>
</CustomField>