default/objects/Credit_Factory_Report__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>