default/objects/Credit_Factory_Report__c/fields/Total_Hits__c.field-meta.xml
<CustomField>
    <fullName>Total_Hits__c</fullName>
    <label>Total Hits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>