default/objects/Credit_Factory_Report__c/fields/Trade_Register_Number__c.field-meta.xml
<CustomField>
    <fullName>Trade_Register_Number__c</fullName>
    <label>Trade Register Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>