default/objects/Credit_Factory_Report__c/fields/Turn_Over_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Turn_Over_Last_Year__c</fullName>
    <label>Turn Over Last Year</label>
    <length>30</length>
    <type>Text</type>
</CustomField>