default/objects/Credit_Factory_Report__c/fields/Unique_Hits__c.field-meta.xml
<CustomField>
    <fullName>Unique_Hits__c</fullName>
    <label>Unique Hits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>