default/objects/Credit_Factory_Report__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <label>Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>