default/objects/Credit_Factory_Report__c/fields/Year_of_Last_Financial_Information__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Last_Financial_Information__c</fullName>
    <label>Year of Last Financial Information</label>
    <length>10</length>
    <type>Text</type>
</CustomField>