default/objects/Credit_Factory_Report__c/recordTypes/Company_Info.recordType-meta.xml
<RecordType>
    <fullName>Company_Info</fullName>
    <active>true</active>
    <label>Company Info</label>
</RecordType>