default/objects/Credit_Factory_Report__c/recordTypes/Default.recordType-meta.xml
<RecordType>
    <fullName>Default</fullName>
    <active>true</active>
    <label>Default</label>
</RecordType>