default/objects/Credit_Factory_Report__c/recordTypes/Russian_credit_check.recordType-meta.xml
<RecordType>
    <fullName>Russian_credit_check</fullName>
    <active>true</active>
    <label>Russian credit check</label>
</RecordType>