default/objects/Credit_Factory_Report__c/recordTypes/Russian_credit_check_manual.recordType-meta.xml
<RecordType>
    <fullName>Russian_credit_check_manual</fullName>
    <active>true</active>
    <label>Russian credit check manual</label>
</RecordType>