default/objects/Credit_Factory_Report__c/recordTypes/Russian_FRAUD_check.recordType-meta.xml
<RecordType>
    <fullName>Russian_FRAUD_check</fullName>
    <active>true</active>
    <description>FRAUD Scoring</description>
    <label>Russian FRAUD check</label>
</RecordType>