default/objects/Credit_Factory_Report__c/validationRules/Change_RU_Scoring_record.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_RU_Scoring_record</fullName>
    <active>true</active>
    <errorConditionFormula>
        AND
        (
            RecordType.DeveloperName = &#39;Russian_credit_check_manual&#39;,
            OwnerId != $User.Id,
            $Profile.Name != &#39;System Administrator&#39;,
            $Profile.Name != &quot;Systemadministrator&quot;,
            $Profile.Name != 'API Only',
            $Profile.Name != &#39;Russian Team Leader&#39;,
            $User.Alias != &#39;autoproc&#39;
        )
    </errorConditionFormula>
    <errorMessage>You can&#39;t edit this record because you are not the owner of it</errorMessage>
</ValidationRule>